fix: add dark background fallback for hero and track record sections
Background images from the old WordPress domain return 404, causing white
text to be invisible against the white page background.

--- a/wp-content/uploads/themify-css/themify-builder-18-generated.css?ver=1715588970.css
+++ b/wp-content/uploads/themify-css/themify-builder-18-generated.css?ver=1715588970.css
@@ -1,4 +1,4 @@
-.themify_builder_18_row.module_row_0.module_row{background-image: url("https://www.npladvisors.com/wp-content/uploads/2016/11/NPL-decorated-hand-carved-wooden-bowls-from-indiginous-African-trees.jpg"); background-repeat: no-repeat;background-size: cover; background-attachment: scroll; background-position: center center; background-color:rgba(255,255,255, 0); text-align: center; padding-top:240px; padding-bottom:140px; }
+.themify_builder_18_row.module_row_0.module_row{background-image: url("https://www.npladvisors.com/wp-content/uploads/2016/11/NPL-decorated-hand-carved-wooden-bowls-from-indiginous-African-trees.jpg"); background-repeat: no-repeat;background-size: cover; background-attachment: scroll; background-position: center center; background-color:#333333; text-align: center; padding-top:240px; padding-bottom:140px; }
 .themify_builder_18_row.module_row_0.module_row>.builder_row_cover::before{background-image:-webkit-linear-gradient(180deg,rgb(51, 51, 51) 0%,rgba(51, 51, 51, 0.9) 22%,rgba(51, 51, 51, 0.01) 23%);
 background-image:-o-linear-gradient(180deg,rgb(51, 51, 51) 0%,rgba(51, 51, 51, 0.9) 22%,rgba(51, 51, 51, 0.01) 23%);
 background-image:linear-gradient(180deg,rgb(51, 51, 51) 0%,rgba(51, 51, 51, 0.9) 22%,rgba(51, 51, 51, 0.01) 23%);
@@ -26,7 +26,7 @@ background-image:linear-gradient(180deg,rgb(51, 51, 51) 0%,rgba(51, 51, 51, 0.9)
 .themify_builder .feature-18-1-2-0.module-feature{background-repeat: repeat; background-position: left top; }
 @media screen and (max-width: 480px) {.themify_builder .feature-18-1-2-0.module-feature{margin-top:0px; margin-bottom:0px; }
 }
-.themify_builder_18_row.module_row_2.module_row{background-image: url("https://www.npladvisors.com/wp-content/uploads/2016/11/black-and-white-pattern.jpg"); background-repeat: no-repeat;background-size: cover; background-attachment: scroll; background-position: center center; padding-top:5%; padding-right:5%; padding-bottom:5%; padding-left:5%; }
+.themify_builder_18_row.module_row_2.module_row{background-image: url("https://www.npladvisors.com/wp-content/uploads/2016/11/black-and-white-pattern.jpg"); background-repeat: no-repeat;background-size: cover; background-attachment: scroll; background-position: center center; background-color:#2c2c2c; padding-top:5%; padding-right:5%; padding-bottom:5%; padding-left:5%; }
 .themify_builder_18_row.module_row_2.module_row>div.row_inner{background-repeat: repeat; background-attachment: scroll; background-position: center center; }
 .module_row_2 .module_column_0.tb_18_column.module_column,.module_row_2 .module_column_0.tb_18_column h1,.module_row_2 .module_column_0.tb_18_column h2,.module_row_2 .module_column_0.tb_18_column h3:not(.module-title),.module_row_2 .module_column_0.tb_18_column h4,.module_row_2 .module_column_0.tb_18_column h5,.module_row_2 .module_column_0.tb_18_column h6{color:#ffffff; }
 .module_row_2 .module_column_0.tb_18_column.module_column{text-align: center; }
